# reproducible-agentic-rag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  results.json
src/: __init__.py  agent.py  cache.py  config.py  data.py  figures.py  index.py  llm.py  metrics.py  provenance.py  run_experiment.py  schemas.py
tests/: test_agent.py  test_cache.py  test_data.py  test_index.py  test_llm.py  test_metrics.py  test_provenance.py  test_run_experiment.py  test_schemas.py
