[project]
name = "reproducible-rag"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bert-score>=0.3.13",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "diskcache>=5.6.3",
    "langchain>=0.3,<0.4",
    "langchain-chroma>=0.2.6",
    "langchain-core>=0.3.86",
    "langchain-openai>=0.3.35",
    "langgraph>=0.2,<0.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openai>=2.42.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
